# SailingAnalysis

./: .env-example  .gitignore  README.md  models.py  pyproject.toml  scratch.py  spatial_tools.py  using.py  weather_tools.py
data/: OpenWeatherMap.csv  SailingTrack.gpx  weather.csv
migrations/: env.py
migrations/versions/: 2023_04_17_21-c77126705deb_weatherstation_weather_tables.py  2023_05_25_12-b5fdbb12f01a_add_sailing_track_point_and_line_.py
